--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "description": "avaliacao dev selia",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
